# Codex-Automate

./: .dockerignore  .env.example  .gitignore  Dockerfile.worker  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
codex_automate/: __main__.py  cli.py  database.py  models.py  orchestrator.py  runtime.py  simulation.py  state.py  worker_host.py
codex_automate/assets/: __init__.py  dashboard.html
codex_automate/schemas/: worker_result.schema.json
deploy/: worker.env.example
deploy/launchd/: com.alex.codex-automate-worker.plist
deploy/systemd/: codex-automate-worker.service
docs/: deployment.md  orchestrator-concept.md
examples/: demo_goal.json
public/: index.html
scripts/: install-launchd-worker.sh  start-worker-host.sh
tests/: test_app.py  test_database.py  test_orchestrator.py  test_schema.py  test_worker_host.py
