[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-automate"
version = "0.1.0"
description = "Prototype for an orchestrated multi-agent Codex workflow."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
  "uvicorn>=0.30"
]

[project.scripts]
codex-automate = "codex_automate.cli:main"

[tool.setuptools.packages.find]
include = ["codex_automate*"]

[tool.setuptools.package-data]
codex_automate = ["schemas/*.json", "assets/*.html"]
